# API-Response-Buffer

./: .gitignore  BDD.md  Cargo.toml  README.md  bddrunning.md  docs.md  main_test_qrng_api.rs  notes.md  old_readme.md  post_reqwest.rs  pyclient.ipynb
.github/workflows/: rust.yml
src/: lib.rs  main.rs  post_reqwest.rs
thinclient/: Cargo.toml
thinclient/src/: main.rs
