[package]
name = "jhaadi"
version = "0.1.0"
authors = ["PrisionMike <su.sh2396@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://projectkarkarduma.blogspot.com"
repository = "https://github.com/PrisionMike/API-Response-Buffer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
reqwest = "0.11.4"
tokio = { version = "1", features = ["full"]}
chrono = "0.4"
actix-web = { version = "4.0.0-beta.10" }
serde = "1.0.132"