[package]
name = "gws"
version = "0.1.0"
edition = "2021"
authors = ["PrisionMike <su.sh2396@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/PrisionMike/API-Response-Buffer"


[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
reqwest = "0.11.11"
# tokio = { version = "1", features = ["full"]}
serde_json = "1.0.69"
serde = "1.0.130"
# chrono = "0.4"
